fix collapsable, update video task

--- a/src/components/Collapsable/Collapsable.styl
+++ b/src/components/Collapsable/Collapsable.styl
@@ -2,12 +2,14 @@
   box-sizing: border-box;
 
   &-header
-    user-select: none;
-    cursor: pointer;
+    box-sizing: border-box;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    user-select: none;
+    cursor: pointer;
 
     &-inner
       flex-grow: 1
@@ -23,4 +25,5 @@
 
 
   &-content
+    box-sizing: border-box;
     overflow hidden
