--- a/src/modules/Collapsable/Collapsable.module.styl
+++ b/src/modules/Collapsable/Collapsable.module.styl
@@ -6,7 +6,6 @@
 
   width: 100%;
   min-width: 600px
-  padding: 24px 24px
   border: 1px solid #C4C4C4;
 
   border-radius: 4px
@@ -15,5 +14,11 @@
     min-width: 100%
 
 .header
+  box-sizing: border-box;
+  padding: 24px
   font(font-preset[title], 600)
   color: color-black
+
+.container
+  box-sizing: border-box;
+  padding: 0 24px 24px
